--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,11 @@
 # Site settings
-title: Student
+title: Personal Wbsite
 email: fathimah21001@mail.unpad.ac.id
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Student - Video Editor - Animal Lover"
 meta_author: Fathimah Rahadian
-
-# Google webmaster tools
-google_verify:
-
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
 
 # Contact form:
 # - static : pass through formspree.io to validate email sending
@@ -21,7 +15,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+disqus_shortname: Araa
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -39,21 +33,17 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+  - title: Linked-In
+    url: https://www.linkedin.com/in/fathimah-azzahra-rahadian-271002
+  - title: Instagram
+    url: https://www.instagram.com/rahadianumb/
   - title: github
     url: http://github.com/azzahrarhdn
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - City: Bogor
+  - Country: Indonesia
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
